# HERA---Heuristic-Empathy-Response-Agent

./: README.md  pyproject.toml
app/: bart_guard.py  groq_client.py  main.py  prompts.py  session_manager.py
eval/: eval.py  test_cases.json
scripts/: evaluate.py
tests/: golden_dataset.json
web/: app.js  index.html
